[tool.poetry]
name = "Transformer Example"
version = "0.1.0"
description = "Example showing how to use transformers"
authors = ["Oliver S <hrmnmichaels@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
matplotlib = "3.5.1"
mypy = "0.910"
numpy = "1.22.3"
pytest = "7.1.2"
black = "22.3.0"
flake8 = "4.0.1"
isort = "^5.10.1"
torch = "^2.1.2"
scikit-learn = "^1.3.2"